--- a/BasicGame/ProjectSettings/BuildSettings.ini
+++ b/BasicGame/ProjectSettings/BuildSettings.ini
@@ -1,19 +1,19 @@
 [Windows]
-AppName=Basic Game
+AppName=BasicGame
 AppIdentifier=com.blueshift.basicgame
 CompanyName=PolygonTek
 AppVersion=1.0
 ProductName=BasicGame
 
 [macOS]
-AppName=Basic Game
+AppName=BasicGame
 AppIdentifier=com.blueshift.basicgame
 CompanyName=PolygonTek
 AppVersion=1.0
 ProductName=BasicGame
 
 [iOS]
-AppName=Basic Game
+AppName=BasicGame
 AppIdentifier=com.blueshift.basicgame
 DevelopmentTeamID=
 CompanyName=PolygonTek
@@ -21,8 +21,8 @@ AppVersion=1.0
 ProductName=BasicGame
 
 [Android]
-AppName=Basic Game
-AppIdentifier=Android.Basic-Game
+AppName=BasicGame
+AppIdentifier=Android.BasicGame
 SDKPath=C:/NVPACK/android-sdk-windows
 NDKPath=C:/NVPACK/android-ndk-r12b
 CompanyName=PolygonTek
