--- a/BasicGame/Config/config.cfg
+++ b/BasicGame/Config/config.cfg
@@ -42,5 +42,5 @@ set texture_lodBias "0"
 set texture_anisotropy "8"
 set texture_filter "LinearMipmapLinear"
 set s_volume "0.8"
-set lua_path ""
-set lua_server "127.0.0.1"
+set lua_debuggerServer "localhost"
+set lua_debug "0"
