--- a/PBRScene/Editor/BuildSettings.ini
+++ b/PBRScene/Editor/BuildSettings.ini
@@ -1,29 +1,34 @@
 [Windows]
-AppName=
-AppIdentifier=
+AppName=PBRScene
+AppIdentifier=com.polygontek.PBRScene
 AppVersion=1.0
 CompanyName=
 ProductName=
 
 [macOS]
-AppName=Blueshift Player
-AppIdentifier=com.polygontek.BlueshiftPlayer
+AppName=PBRScene
+AppIdentifier=com.polygontek.PBRScene
 AppVersion=1.0
 CompanyName=
 ProductName=BlueshiftPlayer
 
 [iOS]
-AppName=Blueshift Player
-AppIdentifier=com.polygontek.BlueshiftPlayer
+AppName=PBRScene
+AppIdentifier=com.polygontek.PBRScene
 AppVersion=1.0
 CompanyName=
 ProductName=BlueshiftPlayer
 DevelopmentTeamID=
+Orientation=0
+UseAdMobRewardBasedVideo=false
 
 [Android]
-AppName=AndroidPlayer
+AppName=PBRScene
 AppPackage=com.polygontek.AndroidPlayer
 AppVersion=1.0
 AppVersionCode=1
 IconPath=
 SecurePath=
+AppIdentifier=com.polygontek.PBRScene
+Orientation=2
+KeystorePath=
