--- a/BasicGame/Editor/BuildSettings.ini
+++ b/BasicGame/Editor/BuildSettings.ini
@@ -1,5 +1,5 @@
 [Android]
-AppIdentifier=Android.BasicGame
+AppIdentifier=com.blueshift.BasicGame
 AppName=BasicGame
 AppPackage=com.blueshift.basicgame
 AppVersion=1.0
@@ -10,6 +10,11 @@ NDKPath=C:/NVPACK/android-ndk-r12b
 ProductName=BasicGame
 SDKPath=C:/NVPACK/android-sdk-windows
 SecurePath=
+Orientation=0
+KeystorePath=C:/play/basicgame.keystore
+KeyStorePassword=123456
+KeyAlias=key0
+KeyAliasPassword=123456
 
 [Windows]
 AppIdentifier=com.blueshift.basicgame
@@ -25,6 +30,8 @@ AppVersion=1.0
 CompanyName=PolygonTek
 DevelopmentTeamID=
 ProductName=BasicGame
+Orientation=0
+UseAdMobRewardBasedVideo=false
 
 [macOS]
 AppIdentifier=com.blueshift.basicgame
