--- a/BasicGame/Editor/BuildSettings.ini
+++ b/BasicGame/Editor/BuildSettings.ini
@@ -11,10 +11,11 @@ ProductName=BasicGame
 SDKPath=C:/NVPACK/android-sdk-windows
 SecurePath=
 Orientation=0
-KeystorePath=C:/play/basicgame.keystore
+KeystorePath=C:/play/mykeys.keystore
 KeyStorePassword=123456
-KeyAlias=key0
+KeyAlias=basicgame
 KeyAliasPassword=123456
+UseAdMobRewardBasedVideo=false
 
 [Windows]
 AppIdentifier=com.blueshift.basicgame
