--- a/PBRScene/Editor/BuildSettings.ini
+++ b/PBRScene/Editor/BuildSettings.ini
@@ -31,4 +31,8 @@ IconPath=
 SecurePath=
 AppIdentifier=com.polygontek.PBRScene
 Orientation=2
-KeystorePath=
+KeystorePath=C:/play/mykeys.keystore
+KeyStorePassword=123456
+KeyAlias=pbrscene
+KeyAliasPassword=123456
+UseAdMobRewardBasedVideo=false
