--- a/BasicGame/Config/config.cfg
+++ b/BasicGame/Config/config.cfg
@@ -9,16 +9,18 @@ set r_motionBlur "0"
 set r_DOF "0"
 set r_SSAO_blur "1"
 set r_SSAO_quality "2"
-set r_SSAO "1"
+set r_SSAO "0"
 set r_sunShafts "1"
 set r_HDR "0"
+set r_maxInstancingCount "1024"
+set r_instancing "2"
 set r_lightScale "1"
-set r_ambientScale "0.5"
+set r_ambientScale "0"
 set r_ambientLit "1"
 set r_CSM_count "4"
 set r_shadowMapQuality "1"
+set r_shadowCubeMapFloat "0"
 set r_shadowCubeMapSize "1024"
-set r_shadowMapFloat "0"
 set r_shadowMapFilterSize "1.0"
 set r_shadowMapSize "1024"
 set r_shadows "1"
@@ -41,6 +43,6 @@ set texture_sRGB "1"
 set texture_lodBias "0"
 set texture_anisotropy "8"
 set texture_filter "LinearMipmapLinear"
-set s_volume "0.8"
+set s_volume "1.000000"
 set lua_debuggerServer "localhost"
 set lua_debug "0"
