--- a/Demo1/ProjectSettings/physics.settings
+++ b/Demo1/ProjectSettings/physics.settings
@@ -1,8 +1,8 @@
 {
    "classname" : "PhysicsSettings",
-   "filterMasks" : [ -1, -1, -1 ],
+   "filterMasks" : [ 5, 1, 1 ],
    "frameRate" : 60,
-   "gravity" : "0 0 -9.8",
+   "gravity" : "0 0 -9.8000002",
    "guid" : "0003763A11010A0B0014001F907DD9B5",
    "maximumAllowedTimeStep" : 0.20000000298023224,
    "solver" : 0,
