--- a/Demo1/ProjectSettings/tagLayer.settings
+++ b/Demo1/ProjectSettings/tagLayer.settings
@@ -1,6 +1,6 @@
 {
    "classname" : "TagLayerSettings",
    "guid" : "0002647611010A0B0014001F907DD9B4",
-   "layer" : [ "Default", "UI", "Editor" ],
+   "layer" : [ "Default", "Editor", "UI" ],
    "tag" : [ "Untagged", "MainCamera", "Player" ]
 }
