--- a/Demo1/Config/android.cfg
+++ b/Demo1/Config/android.cfg
@@ -1,4 +1,6 @@
 unbindall
+set gl_sRGB "0"
+set texture_sRGB "0"
 set texture_mipLevel "0"
 set texture_normalCompression "1"
 set texture_usePrecompressed "0"
