--- a/Demo1/Editor/BuildSettings.ini
+++ b/Demo1/Editor/BuildSettings.ini
@@ -16,6 +16,8 @@ KeyStorePassword=123456
 KeyAlias=basicgame
 KeyAliasPassword=123456
 UseAdMobRewardBasedVideo=false
+UseAdMob=false
+UseAnalytics=false
 
 [Windows]
 AppIdentifier=com.blueshift.basicgame
@@ -23,6 +25,7 @@ AppName=BasicGame
 AppVersion=1.0
 CompanyName=PolygonTek
 ProductName=BasicGame
+AppBuildDir=
 
 [iOS]
 AppIdentifier=polygontek.blueshift.basicgame
@@ -34,6 +37,9 @@ ProductName=BasicGame
 Orientation=0
 UseAdMobRewardBasedVideo=false
 TargetDevice=0
+AppBuildDir=
+UseAdMob=false
+UseAnalytics=false
 
 [macOS]
 AppIdentifier=com.blueshift.basicgame
@@ -41,3 +47,7 @@ AppName=BasicGame
 AppVersion=1.0
 CompanyName=PolygonTek
 ProductName=BasicGame
+AppBuildDir=
+
+[Andoird]
+AppBuildDir=
