--- a/Demo1/Editor/BuildSettings.ini
+++ b/Demo1/Editor/BuildSettings.ini
@@ -25,7 +25,7 @@ AppName=BasicGame
 AppVersion=1.0
 CompanyName=PolygonTek
 ProductName=BasicGame
-AppBuildDir=
+AppBuildDir=D:/play/Demo1-Windows
 
 [iOS]
 AppIdentifier=polygontek.blueshift.basicgame
