--- a/Demo1/Config/config.cfg
+++ b/Demo1/Config/config.cfg
@@ -14,9 +14,12 @@ set r_sunShafts "1"
 set r_HDR "2"
 set r_maxInstancingCount "1024"
 set r_instancing "2"
+set r_probeBakeBounces "4"
+set r_probeBoxProjection "1"
+set r_probeBlending "1"
+set r_indirectLit "1"
 set r_lightScale "1"
 set r_ambientScale "0"
-set r_ambientLit "1"
 set r_CSM_count "4"
 set r_shadowMapQuality "2"
 set r_shadowCubeMapFloat "0"
