--- a/Demo1/Editor/BuildSettings.ini
+++ b/Demo1/Editor/BuildSettings.ini
@@ -1,6 +1,6 @@
 [Android]
-AppIdentifier=com.blueshift.BasicGame
-AppName=BasicGame
+AppIdentifier=com.blueshift.demo1
+AppName=Demo1
 AppPackage=com.blueshift.basicgame
 AppVersion=1.0
 AppVersionCode=1
@@ -20,16 +20,16 @@ UseAdMob=false
 UseAnalytics=false
 
 [Windows]
-AppIdentifier=com.blueshift.basicgame
-AppName=BasicGame
+AppIdentifier=com.blueshift.demo1
+AppName=Demo1
 AppVersion=1.0
 CompanyName=PolygonTek
 ProductName=BasicGame
 AppBuildDir=D:/play/Demo1-Windows
 
 [iOS]
-AppIdentifier=polygontek.blueshift.basicgame
-AppName=Basic Game
+AppIdentifier=polygontek.blueshift.demo1
+AppName=Demo1
 AppVersion=1.0
 CompanyName=PolygonTek
 DevelopmentTeamID=
@@ -42,8 +42,8 @@ UseAdMob=false
 UseAnalytics=false
 
 [macOS]
-AppIdentifier=com.blueshift.basicgame
-AppName=BasicGame
+AppIdentifier=com.blueshift.demo1
+AppName=Demo1
 AppVersion=1.0
 CompanyName=PolygonTek
 ProductName=BasicGame
