--- a/Demo1/Config/config.cfg
+++ b/Demo1/Config/config.cfg
@@ -4,7 +4,7 @@ set s_doppler "1.0"
 set s_khz "44"
 set r_usePostProcessing "1"
 set r_useDeferredLighting "0"
-set r_useDepthPrePass "0"
+set r_useDepthPrePass "1"
 set r_motionBlur "0"
 set r_DOF "0"
 set r_SSAO_blur "1"
@@ -17,14 +17,15 @@ set r_instancing "0"
 set r_probeBakeBounces "2"
 set r_probeBoxProjection "1"
 set r_probeBlending "1"
+set r_specularEnergyCompensation "1"
 set r_indirectLit "1"
 set r_lightScale "1.0"
 set r_ambientScale "0.5"
 set r_CSM_count "4"
 set r_shadowMapQuality "3"
 set r_shadowCubeMapFloat "0"
-set r_shadowCubeMapSize "1024"
-set r_shadowMapFilterSize "2"
+set r_shadowCubeMapSize "2048"
+set r_shadowMapFilterSize "1"
 set r_shadowMapSize "2048"
 set r_shadows "1"
 set r_vertexTextureUpdate "1"
