--- a/Demo1/Editor/BuildSettings.ini
+++ b/Demo1/Editor/BuildSettings.ini
@@ -1,6 +1,6 @@
 [Android]
-AppIdentifier=com.blueshift.demo1
-AppName=Demo1
+AppIdentifier=com.blueshift.bsdemo
+AppName=BS Demo
 AppPackage=com.blueshift.basicgame
 AppVersion=1.0
 AppVersionCode=1
@@ -10,40 +10,40 @@ NDKPath=C:/NVPACK/android-ndk-r12b
 ProductName=BasicGame
 SDKPath=C:/NVPACK/android-sdk-windows
 SecurePath=
-Orientation=0
-KeystorePath=C:/play/mykeys.keystore
+Orientation=2
+KeystorePath=D:/play/BlueshiftExamples/Demo1/ProjectSettings/keystore.keystore
 KeyStorePassword=123456
-KeyAlias=basicgame
+KeyAlias=demo
 KeyAliasPassword=123456
 UseAdMobRewardBasedVideo=false
-UseAdMob=false
+UseAdMob=true
 UseAnalytics=false
 
 [Windows]
-AppIdentifier=com.blueshift.demo1
-AppName=Demo1
+AppIdentifier=com.blueshift.bsdemo
+AppName=BS Demo
 AppVersion=1.0
 CompanyName=PolygonTek
 ProductName=BasicGame
 AppBuildDir=D:/play/Demo1-Windows
 
 [iOS]
-AppIdentifier=polygontek.blueshift.demo1
-AppName=Demo1
+AppIdentifier=polygontek.blueshift.bsdemo
+AppName=BS Demo
 AppVersion=1.0
 CompanyName=PolygonTek
 DevelopmentTeamID=
 ProductName=BasicGame
-Orientation=0
+Orientation=2
 UseAdMobRewardBasedVideo=false
 TargetDevice=0
 AppBuildDir=
-UseAdMob=false
+UseAdMob=true
 UseAnalytics=false
 
 [macOS]
-AppIdentifier=com.blueshift.demo1
-AppName=Demo1
+AppIdentifier=com.blueshift.bsdemo
+AppName=BS Demo
 AppVersion=1.0
 CompanyName=PolygonTek
 ProductName=BasicGame
