--- a/BSDemo/Editor/BuildSettings.ini
+++ b/BSDemo/Editor/BuildSettings.ini
@@ -25,7 +25,7 @@ AppName=BS Demo
 AppVersion=1.0
 CompanyName=PolygonTek
 ProductName=BasicGame
-AppBuildDir=D:/play/Demo1-Windows
+AppBuildDir=D:/play/BSDemo-Windows
 
 [iOS]
 AppIdentifier=polygontek.blueshift.bsdemo
