--- a/BSDemo/Config/highQuality.cfg
+++ b/BSDemo/Config/highQuality.cfg
@@ -24,5 +24,5 @@ set r_fastSkinning "2"
 set texture_mipLevel "0"
 set texture_useNormalCompression "1"
 set texture_useCompression "1"
-set texture_anisotropy "2"
-set texture_filter "LinearMipmapLinear"
+set texture_anisotropy "1"
+set texture_filter "LinearMipmapNearest"
