--- a/BSDemo/Editor/BuildSettings.ini
+++ b/BSDemo/Editor/BuildSettings.ini
@@ -18,6 +18,7 @@ KeyAliasPassword=123456
 UseAdMobRewardBasedVideo=false
 UseAdMob=true
 UseAnalytics=false
+AppBuildDir=D:/play/BSDemo-Android
 
 [Windows]
 AppIdentifier=com.blueshift.bsdemo
@@ -47,7 +48,4 @@ AppName=BS Demo
 AppVersion=1.0
 CompanyName=PolygonTek
 ProductName=BasicGame
-AppBuildDir=
-
-[Andoird]
 AppBuildDir=
